; ModuleID = '/home/carl/AnghaBench/nanomsg/src/core/extr_global.c_nn_term.c'
source_filename = "/home/carl/AnghaBench/nanomsg/src/core/extr_global.c_nn_term.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i32, i32 }

@self = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@NN_CTX_FLAG_TERMING = common dso_local global i32 0, align 4
@NN_MAX_SOCKETS = common dso_local global i32 0, align 4
@NN_CTX_FLAG_TERMED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nn_term() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @self, i32 0, i32 3), align 4
  %3 = icmp ne i32 %2, 0
  br i1 %3, label %5, label %4

4:                                                ; preds = %0
  br label %32

5:                                                ; preds = %0
  %6 = call i32 @nn_mutex_lock(i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @self, i32 0, i32 0))
  %7 = load i32, i32* @NN_CTX_FLAG_TERMING, align 4
  %8 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @self, i32 0, i32 2), align 4
  %9 = or i32 %8, %7
  store i32 %9, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @self, i32 0, i32 2), align 4
  %10 = call i32 @nn_mutex_unlock(i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @self, i32 0, i32 0))
  store i32 0, i32* %1, align 4
  br label %11

11:                                               ; preds = %18, %5
  %12 = load i32, i32* %1, align 4
  %13 = load i32, i32* @NN_MAX_SOCKETS, align 4
  %14 = icmp slt i32 %12, %13
  br i1 %14, label %15, label %21

15:                                               ; preds = %11
  %16 = load i32, i32* %1, align 4
  %17 = call i32 @nn_close(i32 %16)
  br label %18

18:                                               ; preds = %15
  %19 = load i32, i32* %1, align 4
  %20 = add nsw i32 %19, 1
  store i32 %20, i32* %1, align 4
  br label %11

21:                                               ; preds = %11
  %22 = call i32 @nn_mutex_lock(i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @self, i32 0, i32 0))
  %23 = load i32, i32* @NN_CTX_FLAG_TERMED, align 4
  %24 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @self, i32 0, i32 2), align 4
  %25 = or i32 %24, %23
  store i32 %25, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @self, i32 0, i32 2), align 4
  %26 = load i32, i32* @NN_CTX_FLAG_TERMING, align 4
  %27 = xor i32 %26, -1
  %28 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @self, i32 0, i32 2), align 4
  %29 = and i32 %28, %27
  store i32 %29, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @self, i32 0, i32 2), align 4
  %30 = call i32 @nn_condvar_broadcast(i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @self, i32 0, i32 1))
  %31 = call i32 @nn_mutex_unlock(i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @self, i32 0, i32 0))
  br label %32

32:                                               ; preds = %21, %4
  ret void
}

declare dso_local i32 @nn_mutex_lock(i32*) #1

declare dso_local i32 @nn_mutex_unlock(i32*) #1

declare dso_local i32 @nn_close(i32) #1

declare dso_local i32 @nn_condvar_broadcast(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
